2005-10-06  Sven Neumann  <sven@gimp.org>

	* app/config/gimpcoreconfig.c: changed "The GIMP" to "GIMP".

	* plug-ins/common/xbm.c: unmarked same string for translation.

2005-10-06  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimputils.c: gimp_canonicalize_identifier() is new API,
	mark it as such.

2005-10-06  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpprocbrowserdialog.c: capitalization and other string
	changes.

	* libgimpwidgets/gimpbrowser.c: string unification. Set the
	message label italic.

	* plug-ins/common/plugin-browser.c: use ngettext() for plural forms.

2005-10-06  Sven Neumann  <sven@gimp.org>

	* app/dialogs/dialogs-constructors.c
	* app/dialogs/keyboard-shortcuts-dialog.[ch]: include a check
	button for the "save-accels" gimprc property.

2005-10-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/help/domain.c: try to improve the error message that is
	shown for missing help files.

2005-10-05  Sven Neumann  <sven@gimp.org>

	* app/dialogs/about-dialog.c: set application name to "GIMP", the
	expanded acronym is in the comment already.

2005-10-05  Sven Neumann  <sven@gimp.org>

	* app/dialogs/quit-dialog.c: fixed string.

2005-10-05  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpaspectpreview.c
	* libgimp/gimpzoompreview.c: added missing API docs.

2005-10-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/siod-wrapper.c: reverted changes to handling
	of string arrays to stay backward compatible (see bug #168290 and
	bug #317634).

	* plug-ins/script-fu/scripts/font-map.scm: reverted change that
	was done to adapt to above changes (see bug #308681).

2005-10-04  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpbrushcore.c (gimp_brush_core_start): set
	core->jitter here for all brush-based paint tools.

	(gimp_brush_core_interpolate): cleanup.

	* app/paint/gimpbrushcore.h: removed trailing whitespace.

	* app/paint/gimpclone.c (gimp_clone_motion)
	* app/paint/gimppaintbrush.c (_gimp_paintbrush_motion): removed
	jitter stuff here.
