@@ -1,5 +1,7 @@
 2005-10-06  Sven Neumann  <sven@gimp.org>
 
+	* app/config/gimprc-blurbs.h
+	* app/dialogs/quit-dialog.c
 	* app/config/gimpcoreconfig.c: changed "The GIMP" to "GIMP".
 
 	* plug-ins/common/xbm.c: unmarked same string for translation.
